// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimerToggleButton should match the snapshot when timer is not running 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "gold",
      "borderRadius": 10,
      "borderWidth": 3,
    }
  }
>
  <View>
    <Text
      style={
        {
          "fontSize": 30,
          "fontWeight": "700",
        }
      }
    >
      ⚡TRANSFORM NOW!⚡
    </Text>
  </View>
</View>
`;

exports[`TimerToggleButton should match the snapshot when timer is running 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "gold",
      "borderRadius": 10,
      "borderWidth": 3,
    }
  }
>
  <View>
    <Text
      style={
        {
          "fontSize": 30,
          "fontWeight": "700",
        }
      }
    >
      😢 Give up 😢
    </Text>
  </View>
</View>
`;
